# TaskScheduler

./: LICENSE.txt  README  README.md  TaskScheduler.cpp  TaskScheduler.h  keywords.txt  library.json  library.properties  platformio_ci.ini
.github/: FUNDING.yml
.github/workflows/: doxygen.yml  main.yml  platformio.yml  test.yml
GP/: chloe_GP.ino  credit.ino
documentation/: TaskScheduler.doc  TaskScheduler.htm
examples/Scheduler_example/: Scheduler_example.ino
examples/Scheduler_example00_Blink/: Scheduler_example00_Blink.ino
examples/Scheduler_example00_Blink_Adafruit/: Scheduler_example00_Blink_Adafruit.ino
examples/Scheduler_example00_Blink_Namespace/: Scheduler_example00_Blink_Namespace.ino
examples/Scheduler_example01/: Scheduler_example01.ino
examples/Scheduler_example02/: Scheduler_example02.ino
examples/Scheduler_example03/: Scheduler_example03.ino
examples/Scheduler_example04_StatusRequest/: Scheduler_example04_StatusRequest.ino
examples/Scheduler_example05_StatusRequest/: Scheduler_example05_StatusRequest.ino
examples/Scheduler_example06_IDLE/: Scheduler_example06_IDLE.ino
examples/Scheduler_example07_WDT/: Scheduler_example07_WDT.ino
examples/Scheduler_example08_LTS/: Scheduler_example08_LTS.ino
examples/Scheduler_example09_TimeCritical/: Scheduler_example09_TimeCritical.ino
examples/Scheduler_example10_Benchmark/: Scheduler_example10_Benchmark.ino
examples/Scheduler_example11_Priority/: Scheduler_example11_Priority.ino
examples/Scheduler_example12_Priority/: Scheduler_example12_Priority.ino
examples/Scheduler_example14_MultiTab/: file1.cpp  file2.cpp  (+3 more)
extras/: TaskScheduler.doc  TaskScheduler.html  These documents are no longer current.txt
src/: Scheduler.cpp  StatusRequest.cpp  TScheduler.hpp  TSchedulerDecl.hpp  TSchedulerDeclarations.hpp  Task.cpp  TaskScheduler.cpp  TaskScheduler.h  TaskSchedulerDeclarations.h  TaskSchedulerSleepMethods.h
tests/: Arduino.h  CMakeLists.txt  test-scheduler-advanced-features-no-lambda.cpp  test-scheduler-advanced-features.cpp  test-scheduler-basic-thorough-no-lambda.cpp  test-scheduler-basic-thorough.cpp  test-scheduler-basic.cpp  test-scheduler-blink-example.cpp  test-scheduler-priority.cpp  test-scheduler.cpp
(+45 files in other folders)
